// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Super Campaign/Overview/Detail When not executed renders empty when draft campaign is given: details box without template 1`] = `
<div
  class="SuperCampaignOverviewDetail-section-3"
  data-test="super-campaign-details"
>
  <div
    class="MuiBox-root MuiBox-root-8 SuperCampaignOverviewDetail-title-1"
  >
    <p
      class="MuiTypography-root SuperCampaignCardHeader-title-6 MuiTypography-body1"
    >
      Details
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text SuperCampaignCardHeader-action-7 MuiButton-textPrimary MuiButton-textSizeSmall MuiButton-sizeSmall"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Edit
      </span>
    </button>
  </div>
  <div
    class="SuperCampaignOverviewDetail-labelValue-2"
  >
    <span
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-label-9 MuiTypography-caption"
    >
      Email Subject
    </span>
    <p
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-value-10 MuiTypography-body2"
    >
      -
    </p>
  </div>
  <div
    class="SuperCampaignOverviewDetail-labelValue-2"
  >
    <span
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-label-9 MuiTypography-caption"
    >
      Description
    </span>
    <p
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-value-10 MuiTypography-body2"
    >
      -
    </p>
  </div>
  <div
    class="SuperCampaignOverviewDetail-labelValue-2"
  >
    <span
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-label-9 MuiTypography-caption"
    >
      Scheduled for
    </span>
    <p
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-value-10 MuiTypography-body2"
    >
      -
    </p>
  </div>
</div>
`;

exports[`Super Campaign/Overview/Detail When not executed renders template when there is one: details box template preview 1`] = `
<iframe
  class="MarketingTemplateThumbnail-iframe-51"
  frameborder="0"
  scrolling="no"
  srcdoc="<html><body><div>Hello, World!</body></html>"
  title="Preview"
  width="700px"
/>
`;

exports[`Super Campaign/Overview/Detail When not executed renders template when there is one: details box without template 1`] = `
<div
  class="SuperCampaignOverviewDetail-section-39"
  data-test="super-campaign-details"
>
  <div
    class="MuiBox-root MuiBox-root-44 SuperCampaignOverviewDetail-title-37"
  >
    <p
      class="MuiTypography-root SuperCampaignCardHeader-title-42 MuiTypography-body1"
    >
      Details
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text SuperCampaignCardHeader-action-43 MuiButton-textPrimary MuiButton-textSizeSmall MuiButton-sizeSmall"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Edit
      </span>
    </button>
  </div>
  <div
    class="SuperCampaignOverviewDetail-labelValue-38"
  >
    <span
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-label-45 MuiTypography-caption"
    >
      Email Subject
    </span>
    <p
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-value-46 MuiTypography-body2"
    >
      Market Report Q3
    </p>
  </div>
  <div
    class="SuperCampaignOverviewDetail-labelValue-38"
  >
    <span
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-label-45 MuiTypography-caption"
    >
      Description
    </span>
    <p
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-value-46 MuiTypography-body2"
    >
      This is a monthly newsletter that is sent out to Newsletter tag
    </p>
  </div>
  <div
    class="SuperCampaignOverviewDetail-labelValue-38"
  >
    <span
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-label-45 MuiTypography-caption"
    >
      Scheduled for
    </span>
    <p
      class="MuiTypography-root SuperCampaignOverviewDetailLabelValue-value-46 MuiTypography-body2"
    >
      Wednesday, November 17, 2021 at 21:30pm
    </p>
  </div>
</div>
`;
